// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton renders 1`] = `
<button
  className="sc-bdVaJa jcXfcN"
>
  Test
</button>
`;

exports[`LinkButton renders onClick 1`] = `
<button
  className="sc-bdVaJa jcXfcN"
  onClick={[Function]}
>
  Test
</button>
`;
